# mcp-perplexity

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  install.bat  install.ps1  install.sh  pyproject.toml  smithery.yaml
.github/workflows/: pypi-publish.yml  release.yml
src/mcp_perplexity/: __init__.py  server.py
src/mcp_server_perplexity/: server.py
tests/: test_perplexity_api.py
